--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "xlsx": "^0.14.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
